# ansible-role-tripleo-ipa

./: .gitreview  README.md  groups  project.config  setup.cfg
defaults/: main.yml
files/: jdennis-keycloak-httpd-client-install.repo  lslebodn-sssd-1-13-epel-7.repo  rhel-server.repo
files/public_keys/: ayoung.pub  work.pub
handlers/: main.yml
playbooks/: identity.yml
tasks/: main.yml
tests/: test.yml
vars/: main.yml
