[metadata]
name = ansible-role-tripleo-ipa
summary = An Ansible role for deploy an IPA server against a TripleO deployment
description-file =
    README.md
author = RDO-CI Team
author-email = mbultel@redhat.com, harry@redhat.com, apetrich@redhat.com
home-page = https://github.com/redhat-openstack/ansible-role-tripleo-overcloud-scale-nodes
classifier =
  License :: OSI Approved :: Apache Software License
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  Intended Audience :: System Administrators
  Intended Audience :: Information Technology
  Topic :: Utilities

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
data_files =
    usr/local/share/ansible/roles/tripleo-ipa/defaults = defaults/*
    usr/local/share/ansible/roles/tripleo-ipa/files = files/*
    usr/local/share/ansible/roles/tripleo-ipa/handlers = handlers/*
    usr/local/share/ansible/roles/tripleo-ipa/library = library/*
    usr/local/share/ansible/roles/tripleo-ipa/meta = meta/*
    usr/local/share/ansible/roles/tripleo-ipa/tasks = tasks/*
    usr/local/share/ansible/roles/tripleo-ipa/templates = templates/*
    usr/local/share/ansible/roles/tripleo-ipa/tests = tests/*
    usr/local/share/ansible/roles/tripleo-ipa/vars = vars/*
    playbooks = playbooks/*
    config/general_config/ = configs/*

[wheel]
universal = 1

[pbr]
skip_authors = True
skip_changelog = True
